[gd_scene load_steps=4 format=3 uid="uid://cow1dcye8rjvs"]

[ext_resource type="Script" path="res://Scenes/DialogueSystem.gd" id="1_pkxjs"]
[ext_resource type="Texture2D" uid="uid://bplkdvq2ius0c" path="res://Assets/UI/1x/dialogue_box.png" id="2_tsnov"]
[ext_resource type="FontFile" uid="uid://b5g4m6row0mtc" path="res://Assets/Fonts/Blockstepped 3D.ttf" id="3_oqgst"]

[node name="DialogueSystem" type="CanvasLayer"]
script = ExtResource("1_pkxjs")

[node name="Panel" type="Panel" parent="."]
offset_right = 1416.0
offset_bottom = 712.0

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_top = 384.0
offset_right = 1410.0
offset_bottom = 631.0
texture = ExtResource("2_tsnov")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 144.0
offset_top = 432.0
offset_right = 1264.0
offset_bottom = 528.0

[node name="NextButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 128.0
offset_top = 528.0
offset_right = 271.0
offset_bottom = 590.0
theme_override_colors/font_color = Color(0.541176, 0.298039, 0.352941, 1)
theme_override_colors/font_hover_color = Color(0.789919, 0.515756, 0.572268, 1)
theme_override_fonts/font = ExtResource("3_oqgst")
theme_override_font_sizes/font_size = 36
text = "NEXT
"
flat = true

[node name="AcceptButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 1120.0
offset_top = 536.0
offset_right = 1276.0
offset_bottom = 585.0
theme_override_colors/font_color = Color(0.572549, 0.34902, 0.4, 1)
theme_override_colors/font_hover_pressed_color = Color(0.788235, 0.517647, 0.572549, 1)
theme_override_fonts/font = ExtResource("3_oqgst")
theme_override_font_sizes/font_size = 36
text = "ACCEPT
"
flat = true

[connection signal="pressed" from="Panel/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="Panel/AcceptButton" to="." method="_on_accept_button_pressed"]
